# battleship_project

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GITHUB_LINK.txt  README.md  install_dependencies.sh
doxygen/html/: annotated.html  battleship_8h_source.html  battleship_8hpp_source.html  bs__grid_8h_source.html  bs__grid_8hpp_source.html  bs__player_8h_source.html  bs__player_8hpp_source.html  classbattleship.html  classbs__grid.html  classbs__player.html  classbship_1_1battleship-members.html  classbship_1_1battleship.html  classbship_1_1bs__grid-members.html  classbship_1_1bs__grid.html  classbship_1_1bs__player-members.html  classbship_1_1bs__player.html  classbship_1_1bs__player__coll__graph.map  classbship_1_1bs__player__coll__graph.md5  classbship_1_1bs__player__inherit__graph.map  classbship_1_1bs__player__inherit__graph.md5  classbship_1_1bship__exception-members.html  classbship_1_1bship__exception.html  classbship_1_1bship__exception__coll__graph.map  classbship_1_1bship__exception__coll__graph.md5  classbship_1_1bship__exception__inherit__graph.map  classbship_1_1bship__exception__inherit__graph.md5  classbship_1_1console__game-members.html  classbship_1_1console__game.html  (+80 more)
include/: battleship.h  battleship.hpp  bs_grid.h  bs_grid.hpp  bs_player.h  bs_player.hpp  console_game.h  console_game.hpp  exceptions.hpp  human_player.h  slick_player.h
src/: CMakeLists.txt  battleship.cpp  bs_grid.cpp  bs_player.cpp  console_game.cpp  human_player.cpp  main.cpp  slick_player.cpp
test/: CMakeLists.txt  main.cpp  test_battleship.hpp  test_bs_grid.hpp
(+38 files in other folders)
